--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,6 @@ services:
       - "50051:50051"
     command: ["/server"]
     restart: always  # Перезапускать контейнер в случае падения
+networks:
+  grpccache_network:
+    external: true
